--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,8 +3,12 @@
 - type: github
   icon: "fab fa-github"
 
-- type: twitter
-  icon: "fa-brands fa-x-twitter"
+# - type: twitter
+#   icon: "fa-brands fa-x-twitter"
+
+- type: linkedin
+  icon: 'fab fa-linkedin'
+  url:  'https://www.linkedin.com/in/alexander-m-fisher/'                  
 
 - type: email
   icon: "fas fa-envelope"
