--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # used by seo meta and the atom feed
 url: "https://alexandermfisher.github.io"
 
 github:
-  username: alexandermfisher # change to your GitHub username
+  username: alexandermfisher
 
 # twitter:
 #   username: twitter_username # change to your Twitter username
@@ -35,7 +35,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Alexander Fisher
-  email: alexandermfisher73@gmail.com # change to your email address
+  email: af17918@alumni.bristol.ac.uk 
   links:
     # The first element serves as the copyright owner's link
     #- https://twitter.com/username # change to your Twitter homepage
