build-deploy github action - added print ls

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -42,6 +42,10 @@ jobs:
         env:
           JEKYLL_ENV: ${{ github.ref_name == 'main' && 'production' || 'development' }}
 
+    
+      - name: List _site directory contents
+        run: ls -R _site
+
       - name: Test site
         run: |
           bundle exec htmlproofer _site \
