--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -42,11 +42,11 @@ jobs:
         env:
           JEKYLL_ENV: ${{ github.ref_name == 'main' && 'production' || 'development' }}
 
-    
       - name: List _site directory contents
         run: ls -R _site
 
       - name: Test site
+        id: test
         run: |
           bundle exec htmlproofer _site \
             --disable-external \
@@ -59,13 +59,13 @@ jobs:
           path: "_site${{ steps.pages.outputs.base_path }}"
 
       - name: Merge dev to main
-        if: ${{ github.ref_name == 'dev' && success() }}
+        if: ${{ github.ref_name == 'dev' && steps.test.outcome == 'success' }}
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
           git fetch --all
           git checkout main
-          git merge dev --no-ff -m "Automated merge from dev to main"
+          git merge dev --no-ff --allow-unrelated-histories -m "Automated merge from dev to main"
           git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
