--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Build site
         run: |
           echo "Building for ${{ github.ref_name }}"
-          bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}"
+          bundle exec jekyll b -d "_site/project-portfolio"
         env:
           JEKYLL_ENV: ${{ github.ref_name == 'main' && 'production' || 'development' }}
 
@@ -48,7 +48,7 @@ jobs:
       - name: Test site
         id: test
         run: |
-          bundle exec htmlproofer _site \
+          bundle exec htmlproofer _site/project-portfolio \
             --disable-external \
             --ignore-urls "/^http:\/\/127.0.0.1/,/^http:\/\/0.0.0.0/,/^http:\/\/localhost/"
         continue-on-error: ${{ github.ref_name == 'dev' }}
@@ -56,7 +56,7 @@ jobs:
       - name: Upload site artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: "_site${{ steps.pages.outputs.base_path }}"
+          path: "_site"
 
       - name: Merge dev to main
         if: ${{ github.ref_name == 'dev' && steps.test.outcome == 'success' }}
