--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -64,7 +64,7 @@ jobs:
           git config user.email "actions@github.com"
           git fetch --all
           git checkout main
-          git merge dev --no-ff --allow-unrelated-histories -m "Automated merge from dev to main"
+          git merge dev --no-ff --allow-unrelated-histories -m "Automated merge from dev to main" || git merge --strategy=recursive --strategy-option=theirs dev
           git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
