--- a/_config.yml
+++ b/_config.yml
@@ -217,7 +217,7 @@ exclude:
   - purgecss.js
   - rollup.config.js
   - "package*.json"
-  - TODO
+  - "TODO"
 
 jekyll-archives:
   enabled: [categories, tags]
