--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,30 +1,6 @@
-name: "Build, Test, and Deploy"
-
-on:
-  push:
-    branches:
-      - main
-      - dev
-    paths-ignore:
-      - .gitignore
-      - README.md
-      - LICENSE
-
-  workflow_dispatch:
-
-permissions:
-  contents: write
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -38,12 +14,9 @@ jobs:
       - name: Build site
         run: |
           echo "Building for ${{ github.ref_name }}"
-          bundle exec jekyll b -d "_site/project-portfolio"
+          bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: ${{ github.ref_name == 'main' && 'production' || 'development' }}
-
-      - name: List _site directory contents
-        run: ls -R _site
 
       - name: Test site
         id: test
@@ -51,23 +24,12 @@ jobs:
           bundle exec htmlproofer _site \
             --disable-external \
             --ignore-urls "/^http:\/\/127.0.0.1/,/^http:\/\/0.0.0.0/,/^http:\/\/localhost/"
+        continue-on-error: ${{ github.ref_name == 'dev' }}
 
       - name: Upload site artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: "_site"
-
-      - name: Merge dev to main
-        if: ${{ github.ref_name == 'dev' && steps.test.outcome == 'success' }}
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git fetch --all
-          git checkout main
-          git merge dev --no-ff --allow-unrelated-histories -m "Automated merge from dev to main" || git merge --strategy=recursive --strategy-option=theirs dev
-          git push origin main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          path: "_site${{ steps.pages.outputs.base_path }}"
 
   deploy:
     environment:
